# api/whitelist/controller.go
@@ -1,15 +1,13 @@
 package whitelist
 
 import (
-	"context"
 	"github.com/gin-gonic/gin"
 	"net/http"
+	"time"
 	"waf/domain/whitelist"
 	"waf/utils/api"
 	"waf/utils/validator"
 )
-
-var ctx = context.Background()
 
 // Controller 白名单控制器
 type Controller struct {
@@ -43,12 +41,16 @@ func (c *Controller) AddIPToWhitelist(g *gin.Context) {
 		api.HandleError(g, api.ErrInvalidBody)
 		return
 	}
-	err := c.whitelistService.Add(req.IP, ctx)
+
+	// 将秒数转换为 time.Duration
+	expiryDuration := time.Duration(req.Expiry) * time.Second
+
+	err := c.whitelistService.Add(req.IP, expiryDuration)
 	if err != nil {
-		api.HandleError(g, err)
+		api.HandleInternalServerError(g, err)
 		return
 	}
-	g.JSON(http.StatusCreated, Response{Message: "success"})
+	g.JSON(http.StatusOK, Response{Status: 200, Message: "success"})
 }
 
 // RemoveIPFromWhitelist godoc
@@ -57,12 +59,12 @@ func (c *Controller) AddIPToWhitelist(g *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param Authorization header string true "Authorization header"
-// @Param AddIPToWhitelistRequest body AddIPToWhitelistRequest true "IP信息"
+// @Param RemoveIPTiWhitelistRequest body RemoveIPTiWhitelistRequest true "IP信息"
 // @Success 200 {object} Response
 // @Failure 400 {object} api.ErrorResponse
 // @Router /waf/whitelist [delete]
 func (c *Controller) RemoveIPFromWhitelist(g *gin.Context) {
-	var req AddIPToWhitelistRequest
+	var req RemoveIPTiWhitelistRequest
 	if err := g.ShouldBind(&req); err != nil {
 		api.HandleError(g, api.ErrInvalidBody)
 		return
@@ -71,12 +73,12 @@ func (c *Controller) RemoveIPFromWhitelist(g *gin.Context) {
 		api.HandleError(g, api.ErrInvalidBody)
 		return
 	}
-	err := c.whitelistService.Remove(req.IP, ctx)
+	err := c.whitelistService.Remove(req.IP)
 	if err != nil {
-		api.HandleError(g, err)
+		api.HandleInternalServerError(g, err)
 		return
 	}
-	g.JSON(http.StatusOK, Response{Message: "success"})
+	g.JSON(http.StatusOK, Response{Status: 200, Message: "success"})
 }
 
 // GetIps godoc
@@ -85,14 +87,21 @@ func (c *Controller) RemoveIPFromWhitelist(g *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param Authorization header string true "Authorization header"
-// @Success 200 {object} IpResponse
-// @Failure 400 {object} api.ErrorResponse
+// @Success 200 {object} IpListResponse
+// @Failure 500 {object} api.ErrorResponse
 // @Router /waf/whitelist [get]
 func (c *Controller) GetIps(g *gin.Context) {
-	ips, err := c.whitelistService.Get(ctx)
+	ips, err := c.whitelistService.Get()
 	if err != nil {
-		api.HandleError(g, api.ErrInvalidBody)
+		api.HandleInternalServerError(g, err)
 		return
 	}
-	g.JSON(http.StatusOK, IpResponse{Data: ips})
+	resp := IpListResponse{
+		Status:  200,
+		Count:   len(ips),
+		Message: "success",
+		Data:    ips,
+	}
+
+	g.JSON(http.StatusOK, resp)
 }
